# CSE_Recruitment

./: Software-Requirements.md  Task_Document.md  move-diff-drive.py
src/mini_model_description/: CMakeLists.txt  package.xml
src/mini_model_description/config/: rover_controllers.yaml
src/mini_model_description/launch/: sim.launch.py
src/mini_model_description/urdf/: materials.xacro  mini_model.xacro
submissions/nithilan/cat3/: Report_and_Solution.md
submissions/nithilan/cse-recruitment/: .gitignore  platformio.ini  use-of-ai.txt
submissions/nithilan/cse-recruitment/src/: main.cpp
submissions/nithilan/report/: README.md  main.html  main.typ  report.html
submissions/nithilan/ros2/: Dockerfile  commands.sh
